<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fullscreen_content_controls"
    style="?buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:background="@color/black_overlay"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_pve_1"
        style="?buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/pve_1" />

    <Button
        android:id="@+id/button_pve_2"
        style="?buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/pve_2" />

    <Button
        android:id="@+id/button_pve_3"
        style="?buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/pve_3" />

    <Button
        android:id="@+id/button_pve_4"
        style="?buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/pve_4" />

    <Button
        android:id="@+id/button_pvp_device"
        style="?buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/pvp_device" />

</LinearLayout>
